--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -287,7 +287,7 @@ Op vlak van oppervlakte-aandeel beheersovereenkomsten is er in Kortenberg bijna 
 ```{r}
 conclusie_df <- data.frame(onderdeel = "beheersovereenkomsten", 
   Kortenberg = "+", Lovenjoel = "0", opmerking = 
-    paste0("geen  beheerovereenkomsten m.b.t. soortbescherming, Kortenberg",
+    paste0("geen  beheerovereenkomsten m.b.t. soortbescherming, Kortenberg ",
            "over het algemeen quasi geen beheerovereenkomsten"))
 ```
 
@@ -309,7 +309,7 @@ De oppervlaktes zijn gelijkaardig tussen alle deelgebieden. Er is geen duidelijk
 
 ```{r}
 conclusie_df <- rbind(conclusie_df, c("oppervlakte", "0", "0", 
-                        "bijna geen verschil"))
+                        "slechts klein verschil"))
 ```
 
 
@@ -640,7 +640,7 @@ De perceelsgroottes in Lovenjoel zijn iets gelijkaardiger als Zavelberg dan Kort
 
 ```{r}
 conclusie_df <- rbind(conclusie_df, c("perceelsgrootte", "0", "0", 
-                        "voordeel Lovenjoel niet super groot"))
+                        "slechts klein verschil"))
 ```
 
 
@@ -1120,48 +1120,44 @@ We voeren PCA uit waarbij we de data standardiseren (center en scale).
 
 ```{r}
 pca_fit <- prcomp(leefdaal_multivar, center = TRUE, scale = TRUE)
-plot(pca_fit)
-biplot(pca_fit)
 ```
 
-De eerste PC verklaart ruwweg 2/3 van de variatie en de tweede as 1/3.
+De eerste PC verklaart een kleine 2/3 van de variatie in de data en de tweede as een dikke 1/3.
 
 ```{r}
-pca_fit %>%
-  broom::tidy(matrix = "eigenvalues") %>%
-  ggplot(aes(PC, percent)) +
+perc_var(pca_fit$sdev) %>%
+  ggplot(aes(PC, proportie)) +
     geom_bar(stat = "identity") +
     scale_x_continuous(breaks = 1:length(pca_fit$sdev)) +
-    scale_y_continuous(labels = scales::percent_format()) +
-    geom_text(aes(label = round(percent, digits = 3)), vjust = -0.5)
+    scale_y_continuous(limits = c(0, 1)) +
+    geom_text(aes(label = round(proportie, digits = 3)), vjust = -0.5)
 ```
 
 Kortenberg ligt dichter bij Zavelberg langs PC1 en Lovenjoel ligt dichter bij Zavelberg langs PC2.
 
 ```{r}
-pca_fit %>%
-  broom::augment(leefdaal_multivar) %>%
-  ggplot(aes(.fittedPC1, .fittedPC2, colour = .rownames)) + 
+pca_fit$x %>%
+  as.data.frame() %>%
+  rownames_to_column("deelgebied") %>%
+  ggplot(aes(PC1, PC2, colour = deelgebied)) + 
     geom_point(size = 3) +
     scale_y_continuous(limits = c(-7.5, 7.5)) +
     scale_x_continuous(limits = c(-7.5, 7.5)) +
-    geom_text(aes(label = .rownames), vjust = -1) +
-    geom_text(aes(label = paste0("(", round(.fittedPC1, digits = 2), ", ", 
-              round(.fittedPC2, digits = 2), ")")), vjust = 1.5) +
+    geom_text(aes(label = deelgebied), vjust = -1) +
+    geom_text(aes(label = paste0("(", round(PC1, digits = 2), ", ", 
+              round(PC2, digits = 2), ")")), vjust = 1.5) +
     geom_hline(yintercept = 0, colour = "grey", linetype = "dashed") +
     geom_vline(xintercept = 0, colour = "grey", linetype = "dashed") +
-    theme(legend.position = "") +
-    labs(x = "PC1", y = "PC2")
+    theme(legend.position = "")
 ```
 
 Als we de Euclidische afstand tussen de deelgebieden berekenen, ligt Kortenberg iets dichter. 
 
 ```{r}
 # calculate distances
-pca_fit %>%
-  broom::augment(leefdaal_multivar) %>%
-  select(.rownames, .fittedPC1, .fittedPC2) %>%
-  column_to_rownames(var = ".rownames") %>%
+pca_fit$x %>%
+  as.data.frame() %>%
+  select(-PC3) %>%
   dist() %>%
   as.matrix() %>%
   as.data.frame() %>%
@@ -1169,14 +1165,7 @@ pca_fit %>%
   kable()
 ```
 
-
 ```{r}
-# define arrow style for plotting
-arrow_style <- arrow(
-  angle = 20, ends = "first", type = "closed", length = grid::unit(8, "pt")
-)
-
-# plot rotation matrix
 pca_fit %>%
   broom::tidy(matrix = "rotation") %>%
   pivot_wider(names_from = "PC", names_prefix = "PC", values_from = "value") %>%
@@ -1188,7 +1177,20 @@ pca_fit %>%
     scale_y_continuous(limits = c(-0.25, 0.25)) +
     scale_x_continuous(limits = c(-0.5, 0.25)) +
     theme(legend.position = "")
+
+pca_fit$rotation %>%
+  as.data.frame() %>%
+  rownames_to_column("deelgebied") %>%
+  ggplot(aes(PC1, PC2)) +
+    geom_hline(yintercept = 0, colour = "grey", linetype = "dashed") +
+    geom_vline(xintercept = 0, colour = "grey", linetype = "dashed") +
+    geom_segment(xend = 0, yend = 0, arrow = arrow_style) +
+    geom_text(aes(label = deelgebied), hjust = 1, vjust = -0.5, nudge_x = -0.02) +
+    scale_y_continuous(limits = c(-0.25, 0.25)) +
+    scale_x_continuous(limits = c(-0.5, 0.25))
 ```
+
+De vorige figuur is niet overzichtelijk. De volgende tabellen geven de 25 variabelen met de sterkste correlaties met resp. PC1 en PC2.
 
 ```{r}
 pca_fit$rotation %>% 
@@ -1196,6 +1198,7 @@ pca_fit$rotation %>%
   mutate(abs = abs(PC1)) %>%
   arrange(desc(abs)) %>%
   select(PC1) %>%
+  head(n = 25) %>%
   kable()
 
 pca_fit$rotation %>% 
@@ -1203,8 +1206,15 @@ pca_fit$rotation %>%
   mutate(abs = abs(PC2)) %>%
   arrange(desc(abs)) %>%
   select(PC2) %>%
+  head(n = 25) %>%
   kable()
 ```
+
+
+### Conclusie
+
+
+
 
 # Vergelijking o.b.v. expertise
 
