revert unwanted changes in this branch

--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -3139,6 +3139,8 @@ plot_circles <- function(plot) {
             label = "telpunt (300 m buffer)", colour = "darkgreen", 
             nudge_x = 100,
             nudge_y = -10) +
+    
+    coord_sf(datum = proj_crs) +
     labs(title = paste0("plot: ", plot))
 }
 
